--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,11 @@
       content="Web site created using create-react-app"
     />
     <title>Vintage Cameras</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
